--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "scripts": {
     "test": "mocha"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "dependencies": {
     "gulp-util": "~2.2.14",
     "through2": "~0.4.1",
-    "ignore": "~2.2.12"
+    "ignore": "~2.2.12",
+    "ftp": "~0.3.7",
+    "async": "~0.9.0",
+    "which": "~1.0.5"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "should": "~4.0.1"
   }
 }
